--- a/1/Sign-up.html
+++ b/1/Sign-up.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Sansita:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Work+Sans?query=Work+Sans" rel="stylesheet">
     <style>
         body {
-            font-family: 'Sansita', sans-serif;
+            font-family: 'Work Sans', sans-serif;
         }
     </style>
 </head>
@@ -23,6 +23,7 @@
         </div>
         <div class="password">
             <label for="password">Password</label>
+            <img src="c:\Users\student\Documents\Sign up - Sing in\Show.png" alt="img">
             <input type="password" id="password">
         </div>
         <button type="submit">Sign up</button>
