--- a/1/Sign-up.html
+++ b/1/Sign-up.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.google.com/specimen/Work+Sans?query=Work+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    </style>
     <style>
         body {
             font-family: 'Work Sans', sans-serif;
@@ -23,10 +24,12 @@
         </div>
         <div class="password">
             <label for="password">Password</label>
-            <img src="c:\Users\student\Documents\Sign up - Sing in\Show.png" alt="img">
-            <input type="password" id="password">
-        </div>
-        <button type="submit">Sign up</button>
-        <p class="the-end">Already have an account?<a href="Sign-in.html">Sign in</a></p>
+            <div class="password-eye">
+                <input class = "pass" type="password" id="password">
+                <img class = "eye" src="eye_open.jpg" alt="">
+            </div>
+        <button type="submit">Sign in</button>
+        <p class="the-end">Don't have account yet?<a href="Sign-in.html">Sign in</a></p>
     </form>
+    <script src="js.js"></script>
 </body>
